# cdmo_app

./: .gitignore  README.md  app.py  home.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: buoyancy.py  commercial_carriers.py  flow_analysis.py  genetic_algorithm.py  geometry.py  materials.py  scoring.py  sensitivity.py  statistics.py  stl_generator.py
data/sessions/: 16_carriers_analysis_shape1_20260418_210030.pkl  Shape2_16_carriers_analysis_20260419_105642.pkl  Shape3_16_carriers_analysis_20260419_121956.pkl  Shape_4_-_16_carriers_analysis_20260420_204135.pkl
pages/: 1_Upload_Analyse.py  2_Sensitivity_Analysis.py  3_STL_Generator.py  4_Design_Comparison.py  5_Session_Manager.py  6_GA_Optimiser.py  7_Statistical_Analysis.py  8_PDF_Report.py
pages/auth/: login.py  signup.py
tests/: test_flow_analysis.py  test_genetic_algorithm.py  test_geometry.py  test_persistence.py  test_scoring.py
utils/: auth.py  persistence.py  report_generator.py  ui.py
