[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cdmo-app"
version = "1.0.0"
description = "Computational Design & Multi-Objective Optimization — 3D Printed Biofilm Carriers for Faecal Sludge Treatment"
authors = [
    { name = "Majolagbe Yusuf Oladimeji" }
]
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.32.0",
    "trimesh>=4.3.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "plotly>=5.19.0",
    "pandas>=2.2.0",
    "numpy-stl>=3.1.0",
    "fpdf2>=2.7.0",
    "kaleido>=0.2.1",
    "networkx>=3.2.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "utils*", "pages*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
